[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/texture/icon.png" type="Texture" id=1]
[ext_resource path="res://src/entities/enemy/enemy.gd" type="Script" id=2]
[ext_resource path="res://src/entities/enemy/health_bar.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )
anti_aliasing = false

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[node name="enemy" type="PathFollow2D"]
rotate = false
cubic_interp = false
loop = false
script = ExtResource( 2 )

[node name="can_take_cooldown" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 2, 2, 2, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="health_bar" type="ProgressBar" parent="."]
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = -2.0
rect_scale = Vector2( 1, 0.286 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 50.0
percent_visible = false
script = ExtResource( 3 )

[node name="princess_detect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="princess_detect"]
shape = SubResource( 3 )

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
shape = SubResource( 3 )

[connection signal="timeout" from="can_take_cooldown" to="." method="_on_can_take_cooldown_timeout"]
[connection signal="area_entered" from="princess_detect" to="." method="_on_princess_area_entered" flags=3]
